--- a/app/styles/_questions.scss
+++ b/app/styles/_questions.scss
@@ -127,11 +127,11 @@
     }
    .tag-section-wrapper {
         .tags-section {
-            .tag-input {
+           /* .tag-input {
                 width: 25%;
                 border-radius: 3px;
                 background-color:#efefef;
-            }
+            }*/
         }
     }
 
@@ -320,9 +320,9 @@
 
         .tag-section-wrapper {
             .tags-section {
-                .tag-input {
+                /*.tag-input {
                     width: 100%;
-                }
+                }*/
             }
         }
 
